<resources>
    <!-- - - - - - - - - - - - - - - -
      - Used throughout Bake Master  -
      - - - - - - - - - - - - - - - -->

    <!-- Application name -->
    <string name="app_name">Bake Master</string>


    <!-- - - - - - - - - - - -
      -   Used in Card View  -
      - - - - - - - - - - - -->

    <!-- Image content description text -->
    <string name="recipe_image_content_description">Recipe image</string>

    <!-- Recipe servings string -->
    <string name="recipe_servings_string">No. of servings:</string>


    <!-- - - - - - - - - - - - - - - -
      - Dummy data used in Card View -
      - - - - - - - - - - - - - - - -->

    <!-- Dummy data containing a recipe name -->
    <string name="dummy_recipe_name_tv" translatable="false">Nutella Pie</string>

    <!-- Dummy data containing a servings value -->
    <string name="dummy_recipe_servings_value_tv" translatable="false">8</string>


    <!-- - - - - - - - - - - - - - - -
      - Used in recipe step fragment -
      - - - - - - - - - - - - - - - -->

    <!-- The ingredients TextView in recipe step fragment -->
    <string name="ingredients_tv">check the ingredients</string>

    <!-- The list item icon content description -->
    <string name="list_item_icon_description">List item icon</string>

    <!-- - - - - - - - - - - - - - - - - - -
      - Dummy data used in List Item Step  -
      - - - - - - - - - - - - - - - - - - -->

    <!-- The short description dummy text -->
    <string name="dummy_step_short_description" translatable="false">
        Press the crust into baking form.
    </string>


    <!-- - - - - - - - - - - - - - - - - - - -
      - Used in recipe step detail fragment  -
      - - - - - - - - - - - - - - - - - - - -->

    <!-- Previous button text -->
    <string name="previous_button_text">Previous</string>

    <!-- Next button text -->
    <string name="next_button_text">Next</string>


    <!-- - - - - - - - - - - - - - - - - -
      - Used in ingredient list fragment -
      - - - - - - - - - - - - - - - - - -->

    <!-- Ingredient text used to name the ingredients column -->
    <string name="ingredient_text">Ingredient</string>

    <!-- Unit text used to name the units column -->
    <string name="unit_text">Unit</string>

    <!-- Quantity text used to name the quantity column -->
    <string name="qty_text">Qty.</string>


    <!-- - - - - - - - - - - - - - - - - - - - - - - -
      - Dummy data used in ingredient list fragment  -
      - - - - - - - - - - - - - - - - - - - - - - - -->

    <!-- Ingredient dummy name -->
    <string name="dummy_ingredient_name">Graham Cracker crumbs</string>

    <!-- Ingredient dummy unit -->
    <string name="dummy_ingredient_unit">CUP</string>

    <!-- Ingredient dummy quantity -->
    <string name="dummy_ingredient_qty">2</string>


    <!-- - - - - - - - - - -
      - Used in the widget -
      - - - - - - - - - - -->

    <!-- Widget error text -->
    <string name="appwidget_error_text">Error, please recreate the widget</string>

    <!-- Recipe selection error -->
    <string name="widget_configure_instruction_text">Choose the recipe that you want to display the ingredients for.</string>

</resources>
