<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="50dp"
    android:padding="8dp">

    <TextView
        android:id="@+id/ingredient_name_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:textSize="18sp"
        android:gravity="center_vertical|start"
        tools:text="@string/dummy_ingredient_name"/>

    <TextView
        android:id="@+id/ingredient_unit_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical|end"
        tools:text="@string/dummy_ingredient_unit"/>

    <TextView
        android:id="@+id/ingredient_qty_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical|end"
        tools:text="@string/dummy_ingredient_qty"/>

</LinearLayout>