<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center_vertical|start"
            android:text="@string/ingredient_text"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical|end"
            android:text="@string/unit_text"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical|end"
            android:text="@string/qty_text"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredients_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
